--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
-# vercel.json
-
-# TODO: Реализовать логику
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/?",
+      "dest": "api/index.py"
+    }
+  ]
+}
